--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "authors": [
         {
-            "name": "Julio Cesar Barreto",
+            "name": "Julio Barreto",
             "email": "juliocezarjr@gmail.com"
         }
     ],
