--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Julio Barreto",
-            "email": "juliocezarjr@gmail.com"
+            "email": "juliocezarjr@gmail..com"
         }
     ],
     "require": {}
