--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "juliocezarjr/buscador-cursos-da alura",
+    "name": "juliocezarjr/buscador-cursos-alura",
     "description": "Buscardor de cursos na página da Alura",
     "type": "library",
     "authors": [
