retirando os erros do arquivo

--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,8 @@
     "authors": [
         {
             "name": "Julio Barreto",
-            "e-mail": "juliocezarjr@gmail.com"
+            "email": "juliocezarjr@gmail.com"
         }
     ],
     "require": {}
 }
-Conflito resolvido.
