--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
             "email": "juliocezarjr@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "symfony/css-selector": "^5.1",
+        "symfony/dom-crawler": "^5.1",
+        "guzzlehttp/guzzle": "^7.0.1"
+    }
 }
-
